--- a/Code/BE/Home/home.html
+++ b/Code/BE/Home/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Welcome to the Job Portal</h2>
-    <a href="employer_authentication.html"><button>Employer</button></a>
-    <a href="candidate_authentication.html"><button>Candidate</button></a>
+    <a href="..\Employer\employer_login.html"><button>Employer</button></a>
+    <a href="..\Candidate\candidate_login.html"><button>Candidate</button></a>
 </body>
 </html>
