--- a/Code/BE/Employer/Login/employer_login.html
+++ b/Code/BE/Employer/Login/employer_login.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candidate Authentication</title>
+    <title>Employer Login</title>
 </head>
 <body>
-    <h2>Candidate Login</h2>
-    <form id="candidateLoginForm">
+    <h2>Employer Login</h2>
+    <form id="employerLoginForm">
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="candidate_registration.html">Register here</a></p>
-    <script src="user.js"></script>
-    <script src="candidate.js"></script>
+    <p>Don't have an account? <a href="employer_register.html">Register here</a></p>
+    <script src="..\Controllers\user.js"></script>
+    <script src="..\Controllers\employer.js"></script>
     <script>
-        document.getElementById('candidateLoginForm').addEventListener('submit', async (e) => {
+        document.getElementById('employerLoginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const formData = new FormData(e.target);
             const email = formData.get('email');
