--- a/Code/frontend/Candidate/candidate_register.html
+++ b/Code/frontend/Candidate/candidate_register.html
@@ -54,7 +54,7 @@
                 const data = await response.json();
                 console.log('Registration successful:', data);
                 // After successful registration, call the login function
-                const loginResponse = await fetch('http://localhost:3000/User/login', {
+                const loginResponse = await fetch('http://localhost:3000/Candidate/loginCandidate', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
