--- a/Code/frontend/Employer/employer_register.html
+++ b/Code/frontend/Employer/employer_register.html
@@ -69,7 +69,7 @@
                     const loginData = await loginResponse.json();
                     console.log('Login successful:', loginData);
                     const token = loginData.token;
-                    window.location.href = `token.html?token=${token}`;
+                    window.location.href = `employer_profile.html`;
                 } catch (error) {
                     console.error('Error registering employer:', error);
                 }
