--- a/Code/frontend/Candidate/candidate_login.html
+++ b/Code/frontend/Candidate/candidate_login.html
@@ -37,7 +37,7 @@
                 const data = await response.json();
                 console.log('Login successful:', data);
                 const token = data.token;
-                window.location.href = `token.html?token=${token}`;
+                window.location.href = `candidate_profile.html`;
             } catch (error) {
                 console.error('Error logging in candidate:', error);
             }
