--- a/Code/frontend/Employer/employer_profile.html
+++ b/Code/frontend/Employer/employer_profile.html
@@ -14,6 +14,7 @@
     <button onclick="changePassword()">Change Password</button>
     <button onclick="changeEmail()">Change Email</button>
     <button onclick="deleteAccount()">Delete Account</button>
+    <button onclick="logout()">Logout</button>
 
     <script>
         // Fetch and display employer information when the page loads
@@ -64,6 +65,24 @@
 
         async function deleteAccount() {
             // Implement function to delete account
+        }
+        
+        async function logout() {
+            try {
+                const response = await fetch('http://localhost:3000/logout', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                });
+                if (response.ok) {
+                    window.location.href = 'employer_login.html'; // Redirect to login page after logout
+                } else {
+                    console.error('Logout failed');
+                }
+            } catch (error) {
+                console.error('Error during logout:', error);
+            }
         }
     </script>
 </body>
