--- a/Code/frontend/Employer/employer_login.html
+++ b/Code/frontend/Employer/employer_login.html
@@ -31,6 +31,8 @@
                     if (data.loggedIn) {
                         // Redirect to profile page if employer is already logged in
                         window.location.href = 'employer_profile.html';
+                        sleep(1000);
+                        window.location.reload();
                     }
                 } else {
                     console.error('Failed to check if employer is logged in');
